test/compile_errors/stage1/exe/main_missing_name.zig
pub fn (main) void {}

// main missing name
//
// tmp.zig:1:5: error: missing function name
